# Webhook-funcional

./: README.md  Webhook-funcional.code-workspace  webhook.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs
