cabal-version:      2.4
name:               webhook
version:            0.1.0.0
synopsis:           Payment Webhook Service - Programação Funcional Insper 2025-1
author:             Aluno Insper
license:            MIT

executable webhook
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

    build-depends:
        base              >= 4.14 && < 5,
        warp              >= 3.3 && < 3.4,
        wai               >= 3.2,
        http-types        >= 0.12,
        aeson             >= 2.0,
        bytestring        >= 0.11,
        text              >= 1.2,
        http-conduit      >= 2.3,
        stm               >= 2.5,
        containers        >= 0.6,
        unordered-containers >= 0.2
